--- a/MNE-EEG-PROCESSING1/Replicate2.ipynb
+++ b/MNE-EEG-PROCESSING1/Replicate2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 10,
    "id": "c677d129-1a35-475e-b7b4-16f8b539ab01",
    "metadata": {
     "tags": []
@@ -10,6 +10,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import glob\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -24,16 +25,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 11,
    "id": "5bf3368d-d8cb-46c6-90b8-e1212db75ffb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MNE-EEG-PROCESSING/ADHD_part2/v177.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v215.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v200.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v213.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v206.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v204.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v238.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v198.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v263.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v288.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v274.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v270.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v265.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v254.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v286.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v279.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v250.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v244.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v246.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v284.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v181.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v234.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v209.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v196.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v236.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v183.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v227.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v179.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v190.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v231.mat',\n",
+       " 'MNE-EEG-PROCESSING/ADHD_part2/v219.mat']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matfiles = glob.glob('MNE-EEG-PROCESSING/ADHD_part2/*.mat') \n",
+    "\n",
+    "data = {}\n",
+    "matfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "431e6d1e-81d9-48d3-a92c-11dd1fd7ee38",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "mat_data = loadmat('ADHD_part2/v177.mat')\n",
+    "mat_data = loadmat(matfiles[0])\n",
     "\n",
-    "eeg_data = mat_data['v177']\n"
+    "eeg_data = mat_data['v177']"
    ]
   },
   {
@@ -41,12 +98,12 @@
    "id": "06f8d8ad-c77b-48ea-bbef-ec6ef591304f",
    "metadata": {},
    "source": [
-    "The loadmat automatically turns our data within the key `177` into a NumPy array which we refernece to as `v177`."
+    "The loadmat automatically turns the EEG data represented by the name `v177` into a NumPy array which we refernece to as `eeg_data`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 13,
    "id": "4b355ca7-38e2-422b-845e-cff1335794dc",
    "metadata": {
     "tags": []
@@ -68,12 +125,14 @@
    "source": [
     "We assign channel names and sampling frequencies to the corresponding variables.\n",
     "\n",
-    "Then using the `mne.create_info()` function, we create an info object that holds metadata on our EEG dataset."
+    "Then using the `mne.create_info()` function, we create an info object that holds metadata on our EEG dataset.\n",
+    "\n",
+    "Using `eeg_data.T` we transpose our NumPy array and re-assign it to the object `eeg_data`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 14,
    "id": "fb4df499-c881-4ed6-94eb-ffb95734c378",
    "metadata": {
     "tags": []
@@ -95,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 15,
    "id": "6bb2816d-9eb1-4e49-8c9b-76bcf40539bb",
    "metadata": {
     "tags": []
@@ -111,17 +170,17 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x287a0bf40>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x16952f0a0>"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%matplotlib inline\n",
-    "raw.plot(n_channels=19, duration=10, start=0)"
+    "raw.plot(n_channels=19, duration=1000, start=0)"
    ]
   },
   {
@@ -140,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 16,
    "id": "74af1f31-9777-48f8-b2b6-fd0ba58f9777",
    "metadata": {},
    "outputs": [],
@@ -158,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 17,
    "id": "fe825e5d-9a19-4bcc-b5d8-8a748d3b988c",
    "metadata": {
     "tags": []
@@ -171,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 19,
    "id": "553b1fed-3045-40be-9df5-5ff8001bcaad",
    "metadata": {
     "tags": []
@@ -181,21 +240,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3082. -3715.  -609. -1603.  -462. -1860.  -572. -1603.  -940. -1603.\n",
-      " -3921. -3921.  -903. -1713. -2080. -1603. -3751. -1639.  -442.]\n",
-      "[2514. 2303.  825. 1317.  825. 1193.  862. 1524. 1009. 1488. 2555. 5020.\n",
-      " 1267. 1304.  752. 1377. 2761. 1282.  684.]\n"
+      "[  -19.   -55.    85. ... -1075.  -970. -1075.]\n",
+      "[568. 678. 715. ... 457. 310. 347.]\n"
      ]
     }
    ],
    "source": [
-    "print(v177.min(axis=0))\n",
-    "print(v177.max(axis=0))"
+    "print(eeg_data.min(axis=0))\n",
+    "print(eeg_data.max(axis=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 20,
    "id": "f36d644b-661d-4a97-8ef0-4d74213ffe78",
    "metadata": {
     "tags": []
@@ -215,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 21,
    "id": "4f86fc61-2a5b-4e84-a921-d98ba51fb7f9",
    "metadata": {
     "tags": []
@@ -235,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 22,
    "id": "46c131ff-4a71-4400-964a-164f00735452",
    "metadata": {
     "tags": []
@@ -255,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 23,
    "id": "2d57c750-ad7d-4a23-9278-3c72390296e8",
    "metadata": {
     "tags": []
@@ -271,9 +328,7 @@
       " ...\n",
       " [  310.   420.   568. ...   310.   273.   347.]\n",
       " [  568.   678.   715. ...   457.   163.   -57.]\n",
-      " [  310.   494.   568. ...   273.   310.   347.]]\n",
-      "Channels marked as bad:\n",
-      "none\n"
+      " [  310.   494.   568. ...   273.   310.   347.]]\n"
      ]
     }
    ],
